--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -1,30 +1,75 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-h1,h2,h3 {
+
+body {
+  background-color: #a8dd7c;
+  margin: 0;
+  padding: 0;
+  /* width: 100vw; */
+  line-height: 1.5;
+
+}
+
+main {
+
+  font-family: 'Rubik', sans-serif;
+  max-width: 80%;
+  margin: 0 auto;
+  /*min-width:;*/
+  /* margin-left : 15px; */
+  /* padding-top: 100px; */
+}
+
+
+
+h1,h2 {
   /*font-family: "Bungee Static", "Archivo BlackStatic", "SUSE", "roboto", "oi" 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, "Barriecito";*/
-  font-family: "Roboto", "SUSE","Bungee Static", "oi";
+  font-family: "Roboto", "SUSE","Bungee Static", "oi", sans-serif;
+  background-color: antiquewhite;
+}
+
+h3 {
+  font-family: "Roboto", "SUSE","Bungee Static", "oi", sans-serif;
+}
+#hueco{
+  height: 100px;
 }
 
 
-h1{
+h1 {
+  font-family: 'Rubik', sans-serif;
   /* padding: 3em 5em 3em 5em; */
-padding-top: 100px; 
-  margin-left: 20px;
+  padding-top: 10px;
+  /* margin-left: 20px; */
   /* margin-left: 2px;  */
   color: #011c2b;
-  text-align: left;
-  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: antiquewhite;
 }
-h2{
+
+h2 {
+  font-family: 'Rubik', sans-serif;
   /* padding: 3em 5em 3em 5em; */
-padding-top: 20px; 
-  margin-left: 20px;
+  padding-top: 20px;
+
+  /* margin-left: 20px; */
   /* margin-left: 2px;  */
   color: #011c2b;
   text-align: left;
+  text-transform: uppercase;
+  background-color: antiquewhite;
 }
 
 a {
   color: #a30cb1;
+}
+
+p {
+  line-height: 1.5;
+  font-family: "Roboto","SUSE", "Bungee Static", "oi", sans-serif;
+
 }
 
 #lista1 {
@@ -32,7 +77,7 @@ a {
   font-size: 19px;
   font-family: "sans-serif", "arial";
   list-style-type: none;
-  padding-top: 200px; 
+  padding-top: 100px; 
   margin-left: 20px;
 /* z-index: 1; */
 }
@@ -41,22 +86,36 @@ a {
 #lista2 {
   font-size: 1em;
   font-family: "arial";
-   padding-top: 200px; 
+   padding-top: 100px; 
    margin-left: 20px;
 }
 
 #lista-de-imagenes {
   font-size: 2em;
   font-family: "arial";
-  padding-top: 150px; 
+  padding-top: 100px; 
   margin-left: 20px;
 }
 
 #lista-de-naturaleza {
   font-size: 2em;
   font-family: "arial";
-  padding-top: 150px; 
+  padding-top: 100px; 
   margin-left: 20px;
+}
+
+.imagen {
+  border-radius: 15px;
+  /* Esto redondea las cuatro esquinas */
+  width: 300px;
+  /* Opcional: ajusta el tamaño de la imagen */
+  /* height: 200px; */
+  /* Opcional: ajusta el tamaño de la imagen */
+  border: 3px solid #3eb7e7;
+  /* Opcional: añade un borde */
+  object-fit: cover;
+  /* Para que la imagen no se distorsione si no es cuadrada */
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
 }
 
 .imagen-redondeada {
@@ -66,41 +125,68 @@ a {
   /* Opcional: ajusta el tamaño de la imagen */
   height: 200px;
   /* Opcional: ajusta el tamaño de la imagen */
-  /* border: 1px solid #000; */
+  border: 3px solid #000;
   /* Opcional: añade un borde */
   object-fit: cover;
   /* Para que la imagen no se distorsione si no es cuadrada */
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
 }
-
 .imagen-circular {
   border-radius: 50%;
   /* Esto crea un círculo perfecto si la imagen es cuadrada */
   width: 200px;
-  height: 200px;
+  /* height: 200px; */
   object-fit: cover;
+   border: 3px solid #f1eded;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
 }
 
-main {
-  max-width: 80%;
-  /*min-width:;*/
-  /* margin-left : 15px; */
-  /* padding-top: 100px; */
+.imagen-circular:hover {
+  border-radius: 50%;
+  /* Esto crea un círculo perfecto si la imagen es cuadrada */
+  width: 250px;
+  /* height: 250px; */
+  object-fit: cover;
+   border: 3px solid #f1eded;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
+}
+.imagen-sombra {
+  border-radius: 30% 20%;
+  width: 200px;
+  height: 200px;
+   border: 3px solid #047420;
+   filter: grayscale(90%);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
+}
+.imagen-sombra:hover {
+  border-radius: 30% 20%;
+  width: 200px;
+  height: 200px;
+   border: 3px solid #047420;
+ filter:none;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
+}
+.imagen-brillo {
+  border-radius: 5px;
+  width: 200px;
+  /* height: 200px; */
+  border: 3px solid #da9008;
+  /* Opcional: añade un borde */
+  filter: brightness(1);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
+}
+.imagen-brillo:hover {
+  border-radius: 5px;
+  /* width: 250px; */
+  /* height: 250px; */
+  border: 3px solid #da9008; /* Opcional: añade un borde */
+   filter: brightness(1.5);
 }
 
-body {
-  background-color: #a8dd7c;
-  margin-left: 20px;
-  padding-top:200px;
-  /* height: 300%; */
-  height: auto;
-  width: 100vw;
-  line-height: 1.5;
- font-family: "Roboto", "SUSE","Bungee Static", "oi";
-}
 
 #texto-especial {
   background: #74bb17;
-  padding: 4px 8px;
+  padding: 8px 12px;
   vertical-align: text-bottom;
  }
 
@@ -109,6 +195,7 @@ body {
   border-bottom: 2px solid #eb2727;
   border-right: 2px solid #061430;
   border-top: 2px solid #eb2727;
+  margin: 20px 0px;
 }
 
 
@@ -117,9 +204,10 @@ footer{
   border-top: 4px solid #09862e;
   background-color: #b9b0b0;
   color: #0e0000;
+  padding: 20px; 
+  /* margin-top: 10px; */
   /* padding: 10px;  */
-  margin-top: 10px;
-  text-align: left;
+   text-align: left;
   height: auto;
   /* width: 100vw; */
   /*background-color: #06301c;*/
@@ -135,6 +223,29 @@ footer div img {
   vertical-align: top;
   width: 200px;
   border-radius: 50px 5px 70px 7px;
+}
+
+#botones {
+  display: flex;
+  flex-wrap: wrap;
+  /*salta linea*/
+  /* justify-content: space-between;
+  max-width: 80vw;
+  margin: auto; */
+
+}
+
+#indicador {
+  width: 15px;
+  height: 30px;
+  /* border-radius: 100%;
+  border: 1px solid rgb(146, 5, 34);*/
+  /* padding: 5px; */
+  /*background-color: #f2f5f7; */
+  position:relative;
+
+  bottom: 40px;
+  right: 40px;
 }
 
 #boton-arriba2{
@@ -157,6 +268,23 @@ right: 25px;
   z-index: 1; 
 }
 
+@media screen and (min-width:1000px){
+    .noticia{
+        max-width: 60vw;
+    }
+  
+    .noticia p{
+        font-size: 1.5em ;
+    }    
+   
+    .noticia h1{
+        font-size: 3em ;
+    }
+    
+     body {
+        background-color: lightblue;
+    }
+}
 
 /* **************     header  **************      */
 header {
@@ -209,12 +337,14 @@ header a:hover {
 /*          galeria          */
 
 #grid {
- display: grid;
-  height: auto;
- /* grid-template: repeat(3, 1fr) / repeat(3, 1fr); */
- grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: auto;
-    margin-bottom: 30px;
+   display: grid;
+   height: auto;
+   /* grid-template: repeat(3, 1fr) / repeat(3, 1fr); */
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   grid-gap: auto;
+   margin-bottom: 30px;
+   text-align: center;
+
    
 }
 
@@ -229,6 +359,112 @@ header a:hover {
     filter: none; /* quito el filtro*/
     transition: all 0.3s ease-in-out; /*modifico como se hace la transicion de las propiedades de normal a hover. /propiedad/tiempo/modo/ */
 }
+
+/* posicion, fondo y linea inferior de nav */
+nav {
+  position: sticky;
+  top: 0px;
+  /*bottom: 40px;*/
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2.5px solid rgb(26, 61, 177);
+  background-color: #f2f5f7;
+    z-index: 100;
+    font-family: 'Rubik', sans-serif;
+}
+
+nav ul {
+  display: flex;
+  gap: 50px;
+  /*espacio entre elementos*/
+}
+
+nav img {
+  height: 50px;
+  width: 50px;
+  transition: 0.3s ease;
+}
+
+nav img:hover {
+  transform: rotate(360deg);
+  /*transform: scale(1.2);*/
+}
+
+nav li {
+  list-style: none;
+}
+
+nav li a:hover {
+  background-color: #092beb;
+  color: #dfd3d4;
+
+}
+
+nav li a {
+  padding: 8px 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: none 200ms ease-out;
+  color: rgb(26, 61, 177);
+}
+
+
+/* escondo el cuadrado del checkbox */
+#menu {
+  display: none;
+}
+
+/* redimensiono el icono de hamburguesa */
+nav svg {
+  width: 50px;
+  height: 50px;
+}
+
+/* escondo el logo y la lista */
+.menu-desplegable {
+  display: none;
+}
+
+/* cuando el checkbox está marcado, hago el logo y la lista visibles */
+input:checked~.menu-desplegable {
+  display: block;
+  text-align: center;
+}
+
+/* redimensiono el logo */
+/* nav a img {
+  width: 30%;
+} */
+
+/* quito los estilos predeterminados de la lista */
+ul.menu-desplegable {
+  list-style: none;
+  padding: 0;
+}
+
+/* añado separacion a los elementos de la lista */
+ul.menu-desplegable li {
+  padding: 0.5em;
+}
+
+/* pongo estilo a los enlaces de la lista */
+ul.menu-desplegable a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4E75FF;
+  font-size: 1.5em;
+  padding: 0.2em 0.4em;
+}
+
+/* cambio los estilos de los enlaces cuando el cursor esta sobre ellos */
+ul.menu-desplegable a:hover {
+  background-color: #4E75FF;
+  color: white;
+}
+
+
 /* Defino los estilos que se van a aplicar cuando el ancho de pantalla sea minimo 1000px */
 @media (min-width:1000px) {
 
@@ -263,6 +499,6 @@ header a:hover {
         display: flex;
         justify-content: space-between;
         align-items: center;
-         font-family: "Roboto", "SUSE","Bungee Static", "oi";
+        font-family: "Roboto", sans-serif;
     }
 }
