--- a/styles/float.css
+++ b/styles/float.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
@@ -11,6 +10,7 @@ body {
   line-height: 1.5;
 
 }
+
 main {
 
   font-family: 'Rubik', sans-serif;
@@ -33,7 +33,7 @@ h1 {
   background-color: antiquewhite;
 }
 
-#hueco{
+#hueco {
   height: 100px;
 }
 
@@ -56,7 +56,7 @@ a {
 
 p {
   line-height: 1.5;
-  font-family: "Roboto","SUSE", "Bungee Static", "oi", sans-serif;
+  font-family: "Roboto", "SUSE", "Bungee Static", "oi", sans-serif;
 }
 
 /* posicion, fondo y linea inferior de nav */
@@ -112,24 +112,24 @@ nav li a {
 
 /* escondo el cuadrado del checkbox */
 #menu {
-    display: none;
+  display: none;
 }
 
 /* redimensiono el icono de hamburguesa */
 nav svg {
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 /* escondo el logo y la lista */
 .menu-desplegable {
-    display: none;
+  display: none;
 }
 
 /* cuando el checkbox está marcado, hago el logo y la lista visibles */
 input:checked~.menu-desplegable {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 /* redimensiono el logo */
@@ -139,97 +139,75 @@ input:checked~.menu-desplegable {
 
 /* quito los estilos predeterminados de la lista */
 ul.menu-desplegable {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 /* añado separacion a los elementos de la lista */
 ul.menu-desplegable li {
-    padding: 0.5em;
+  padding: 0.5em;
 }
 
 /* pongo estilo a los enlaces de la lista */
 ul.menu-desplegable a {
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #4E75FF;
-    font-size: 1.5em;
-    padding: 0.2em 0.4em;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4E75FF;
+  font-size: 1.5em;
+  padding: 0.2em 0.4em;
 }
 
 /* cambio los estilos de los enlaces cuando el cursor esta sobre ellos */
 ul.menu-desplegable a:hover {
-    background-color: #4E75FF;
-    color: white;
+  background-color: #4E75FF;
+  color: white;
 }
 
 /* Pongo las noticas con imagen float a la izquierda, derecha o ninguno */
-div.noticia{
-    max-width: 80vw;
-    height:100vw;
-    margin:0px 0px 40px 0px;
-    line-height: 1.5;
-    /* background-image:  url("../image/junglas-1024x683.jpg"); */
-       background-image:  url("../image/un-entorno-rural-tranquilo-la-luz-del-dia.jpg");
-    background-repeat: no-repeat;
-    /* background-position:  50% 50%; */
-    background-position: center 10%;
-    background-size:100%;
-    backdrop-filter: blur(30px);
+div.noticia {
+  max-width: 80vw;
+  /* height: 100vw; */
+  margin: 0px 0px 40px 0px;
+  line-height: 1.5;
+  background-image: url("../image/pngtree-forest-leaves-in-the-rain-beautiful-scenery-green-natural-background-picture-image_2423472.jpg");
+  /* background-image:  url("../image/un-entorno-rural-tranquilo-la-luz-del-dia.jpg"); */
+  /* border: 0px 0px 2px 0px solid #a8dd7c;  */
+  background-repeat: no-repeat;
+  /* background-position:  50% 50%; */
+  background-position: center 10%;
+  background-size: 100%;
+  backdrop-filter: blur(30px);
 }
 
 .noticia__img--none {
- display: block;
-  max-width: 40vw;
+  display: block;
   margin: auto;
-  border-radius: 50%;
-  border: 2px solid #f1eded;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra con desplazamiento y desenfoque */
+  width: 40vw;
+  height: 40vw;
+  border-radius: 100%;
+  border: 2px solid #a8dd7c;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
+  /* Sombra con desplazamiento y desenfoque */
   filter: grayscale(50%);
 }
 
 
 .noticia__img--left {
-  max-width: 40vw;
-  /* margin: 40vw; */
-   float: right;
-  /* float: none; */
-  /* margin-left: 1em; */
+  width: 40vw;
+  float: right;
   margin: 10px 0px 10px 20px;
-/* box-shadow: 0px 10px 10px  rgba(0, 0, 0, 1); */
-  /* margin:0px 20px 0px 20px; */
-  /* border-radius: 10%; */
-
 }
-/* @media only screen and (max-width: 990px) {
-  body {
-    background-color: lightblue;
-  }
-}*/
 
+.noticia__img--rigth {
+  width: 100%;
+  float: left;
+  margin: 10px 20px 10px 0px;
+}
 
-/* .video-container {
-            width: 50%;*/ /* O el ancho que desees */
-            /* margin: 20px auto; */ /*Para centrarlo */
-            /* position: relative;
-            padding-bottom: 56.25%; Proporción 16:9
-            height: 0;
-            overflow: hidden;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        } */ 
-
-   
- 
-        /* estilo del contenedor */
+/* estilo del contenedor */
 .galeria {
   width: 580px;
-   /* width: 535px; */
+  /* width: 535px; */
   /* debemos dar un ancho fijo */
   margin: 20px auto;
   overflow: hidden;
@@ -247,7 +225,7 @@ div.noticia{
   left: 50px;
   /* !!Ancho de la parte visible!! */
   width: 335px;
-   /* width: 350px; */
+  /* width: 350px; */
   box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.6);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -295,14 +273,14 @@ div.noticia{
 }
 
 /* mueve las imagenes a la izquierda. ~ selecciona los hermanos siguientes al elemento */
-.galeria input:checked ~ figure {
- -webkit-transition: all 0.7s ease-in-out;
+.galeria input:checked~figure {
+  -webkit-transition: all 0.7s ease-in-out;
   -moz-transition: all 0.7s ease-in-out;
   -o-transition: all 0.7s ease-in-out;
   -ms-transition: all 0.7s ease-in-out;
   transition: all 0.7s ease-in-out;
   left: 335px;
-} 
+}
 
 /* estilo para la descripción de las imágenes */
 .galeria figcaption {
@@ -316,7 +294,7 @@ div.noticia{
   -o-transition: all 0.2s linear;
   -ms-transition: all 0.2s linear;
   transition: all 0.2s linear;
-} 
+}
 
 .galeria figcaption span {
   position: absolute;
@@ -324,12 +302,12 @@ div.noticia{
   margin-top: -30px;
   right: 20px;
   left: 20px;
- overflow: hidden;
+  overflow: hidden;
   text-align: center;
   background: rgba(87, 73, 81, 0.3);
-line-height: 20px;
+  line-height: 20px;
   font-size: 18px;
- 
+
   text-transform: uppercase;
   letter-spacing: 4px;
   font-weight: 700;
@@ -339,16 +317,16 @@ line-height: 20px;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
-} 
+}
 
-.galeria input:checked + figcaption,
-.galeria input:checked:hover + figcaption {
+.galeria input:checked+figcaption,
+.galeria input:checked:hover+figcaption {
   background: rgba(87, 73, 81, 0);
 }
 
 /* hacemos visible el texto de descripción. + selector de hermano adyacente */
-.galeria input:checked + figcaption span {
- -webkit-transition: all 0.4s ease-in-out 0.5s;
+.galeria input:checked+figcaption span {
+  -webkit-transition: all 0.4s ease-in-out 0.5s;
   -moz-transition: all 0.4s ease-in-out 0.5s;
   -o-transition: all 0.4s ease-in-out 0.5s;
   -ms-transition: all 0.4s ease-in-out 0.5s;
@@ -358,22 +336,22 @@ line-height: 20px;
   filter: alpha(opacity=99);
   opacity: 1;
   top: 50%;
-} 
+}
 
-.galeria #ia-selector-last:checked + figcaption span {
+.galeria #ia-selector-last:checked+figcaption span {
   -webkit-transition-delay: 0.3s;
   -moz-transition-delay: 0.3s;
   -o-transition-delay: 0.3s;
   -ms-transition-delay: 0.3s;
   transition-delay: 0.3s;
-} 
+}
 
 /* sombra al hacer hover sobre input */
-.galeria input:hover + figcaption {
+.galeria input:hover+figcaption {
   background: rgba(87, 73, 81, 0.3);
 }
 
-.galeria input:checked ~ figure input {
+.galeria input:checked~figure input {
   z-index: 1;
 }
 
@@ -396,14 +374,14 @@ figure {
     width: 40px;
   }
 
-  .galeria input:checked ~ figure {
+  .galeria input:checked~figure {
     left: 260px;
   }
 
   .galeria figcaption span {
     font-size: 16px;
   }
-} 
+}
 
 @media screen and (max-width: 520px) {
   .galeria {
@@ -419,7 +397,7 @@ figure {
     width: 20px;
   }
 
-  .galeria input:checked ~ figure {
+  .galeria input:checked~figure {
     left: 180px;
   }
 
@@ -432,24 +410,24 @@ figure {
 }
 
 
-        
-footer{
+
+footer {
   border-top: 4px solid #09862e;
   background-color: #b9b0b0;
   color: #0e0000;
-  padding: 20px; 
+  padding: 20px;
   /* margin-top: 10px; */
   text-align: left;
   height: auto;
   /* width: 100vw; */
   /*background-color: #06301c;*/
-  background-image: linear-gradient(
-    55deg, rgb(165, 221, 184) 0%, rgb(33, 241, 120) 70%);
- /*paddding: 50%;*/
-   max-width: 100%;
+  background-image: linear-gradient(55deg, rgb(165, 221, 184) 0%, rgb(33, 241, 120) 70%);
+  /*paddding: 50%;*/
+  max-width: 100%;
 
 
 }
+
 footer div img {
   display: inline-block;
   vertical-align: top;
@@ -474,7 +452,7 @@ footer div img {
   border: 1px solid rgb(146, 5, 34);*/
   /* padding: 5px; */
   /*background-color: #f2f5f7; */
-  position:relative;
+  position: relative;
 
   bottom: 40px;
   right: 40px;
@@ -501,59 +479,59 @@ footer div img {
 }
 
 
-@media screen and (min-width:1000px){
-    .noticia{
-        max-width: 60vw;
-    }
-  
-    .noticia p{
-        font-size: 1.5em ;
-    }    
-   
-    .noticia h1{
-        font-size: 3em ;
-    }
-    
-     body {
-        background-color: lightblue;
-    }
+@media screen and (min-width:1000px) {
+  .noticia {
+    max-width: 60vw;
+  }
+
+  .noticia p {
+    font-size: 1.5em;
+  }
+
+  .noticia h1 {
+    font-size: 3em;
+  }
+
+  body {
+    background-color: lightblue;
+  }
 }
 
 /* Defino los estilos que se van a aplicar cuando el ancho de pantalla sea minimo 1000px */
 @media (min-width:1000px) {
 
-    /* escondo el icono hamburguesa y el checkbox */
-    nav input {
-        display: none;
-    }
+  /* escondo el icono hamburguesa y el checkbox */
+  nav input {
+    display: none;
+  }
 
-    nav label {
-        display: none;
-    }
+  nav label {
+    display: none;
+  }
 
-    /* muestro el nav completo */
-    ul.menu-desplegable {
-        display: flex;
-        gap: 50px;
-    }
+  /* muestro el nav completo */
+  ul.menu-desplegable {
+    display: flex;
+    gap: 50px;
+  }
 
-    a.menu-desplegable {
-        display: block;
-    }
+  a.menu-desplegable {
+    display: block;
+  }
 
-    /* redimensiono el logo */
-    a.menu-desplegable img {
-        width: 60px;
-        height: 60px;
-    }
+  /* redimensiono el logo */
+  a.menu-desplegable img {
+    width: 60px;
+    height: 60px;
+  }
 
-    /* añado la colocacion de los elementos del nav en horizontal */
-    nav {
-        padding: 10px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  /* añado la colocacion de los elementos del nav en horizontal */
+  nav {
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
 
 }
