--- a/styles/float.css
+++ b/styles/float.css
@@ -165,7 +165,7 @@ ul.menu-desplegable a:hover {
 
 /* Pongo las noticas con imagen float a la izquierda, derecha o ninguno */
 div.noticia {
-  max-width: 80vw;
+  width: 80vw;
   /* height: 100vw; */
   margin: 0px 0px 40px 0px;
   line-height: 1.5;
