--- a/styles/float.css
+++ b/styles/float.css
@@ -167,7 +167,7 @@ ul.menu-desplegable a:hover {
 div.noticia {
   width: 80vw;
   /* height: 100vw; */
-  margin: 0px 0px 40px 0px;
+  margin: auto;
   line-height: 1.5;
   background-image: url("../image/pngtree-forest-leaves-in-the-rain-beautiful-scenery-green-natural-background-picture-image_2423472.jpg");
   /* background-image:  url("../image/un-entorno-rural-tranquilo-la-luz-del-dia.jpg"); */
@@ -182,10 +182,10 @@ div.noticia {
 .noticia__img--none {
   display: block;
   margin: auto;
-  width: 40vw;
-  height: 40vw;
+  max-width: 30vw;
+  max-height: 30vw;
   border-radius: 100%;
-  border: 2px solid #a8dd7c;
+  border: 4px solid #a8dd7c;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
   /* Sombra con desplazamiento y desenfoque */
   filter: grayscale(50%);
@@ -193,23 +193,24 @@ div.noticia {
 
 
 .noticia__img--left {
-  width: 40vw;
+  max-width: 30vw;
   float: right;
   margin: 10px 0px 10px 20px;
   overflow: hidden;
 }
 
 .noticia__img--rigth {
-  width: 40vw;
+  max-width: 30vw;
   float: left;
-  margin: 10px 20px 10px 0px;
+  margin: 10px 20px 20px 0px;
   overflow: hidden;
 }
 
 /* estilo del contenedor */
 .galeria {
-  width: 580px;
-  /* width: 535px; */
+  max-width: auto;
+  /* width: 580px; */
+  width: 535px;
   /* debemos dar un ancho fijo */
   margin: 20px auto;
   overflow: hidden;
@@ -226,7 +227,7 @@ div.noticia {
   /* colocamos todas arriba */
   left: 50px;
   /* !!Ancho de la parte visible!! */
-  width: 335px;
+  width: auto;
   /* width: 350px; */
   box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.6);
   -webkit-transition: all 0.3s ease-in-out;
@@ -426,6 +427,7 @@ footer {
   background-image: linear-gradient(55deg, rgb(165, 221, 184) 0%, rgb(33, 241, 120) 70%);
   /*paddding: 50%;*/
   max-width: 100%;
+  clear:both;
 
 
 }
